generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// generator dbml {
//   provider = "prisma-dbml-generator"
// }

model User {
  id                               String                   @id @default(uuid())
  fullName                         String
  email                            String                   @unique
  password                         String
  role                             UserRole
  createdAt                        DateTime                 @default(now())
  updatedAt                        DateTime                 @updatedAt
  PurchaseOrder                    PurchaseOrder[]          @relation("PreparedBy")
  PurchaseOrdersApproved           PurchaseOrder[]          @relation("ApprovedBy")
  MaterialIssueVouchers            MaterialIssueVoucher[]   @relation("IssuedTo")
  MaterialIssueVouchersPrepared    MaterialIssueVoucher[]   @relation("PreparedByIssue")
  MaterialIssueVouchersApproved    MaterialIssueVoucher[]   @relation("ApprovedByIssue")
  MaterialIssueVouchersReceived    MaterialIssueVoucher[]   @relation("ReceivedByIssue")
  MaterialReceiveVouchers          MaterialReceiveVoucher[] @relation("PurchasedBy")
  MaterialReceiveVouchersReceived  MaterialReceiveVoucher[] @relation("ReceivedByReceive")
  MaterialReceiveVouchersApproved  MaterialReceiveVoucher[] @relation("ApprovedByReceive")
  MaterialRequestVouchersRequested MaterialRequestVoucher[] @relation("RequestedBy")
  MaterialRequestVouchersApproved  MaterialRequestVoucher[] @relation("ApprovedByRequest")
  MaterialReturnVouchers           MaterialReturnVoucher[]  @relation("ReturnedByReturn")
  MaterialReturnVouchersReceived   MaterialReturnVoucher[]  @relation("ReceivedByReturn")
  MaterialIssueVoucher             MaterialIssueVoucher[]
  MaterialReturnVoucher            MaterialReturnVoucher[]
}

model PurchaseOrder {
  id                      String                   @id @default(uuid())
  date                    DateTime
  purchaseNumber          String
  projectDetails          String?
  supplierName            String
  materialRequestId       String
  materialRequest         MaterialRequestVoucher   @relation(fields: [materialRequestId], references: [id], onDelete: Cascade)
  items                   PurchaseOrderItem[]      @relation(name: "items")
  subTotal                Float
  vat                     Float?
  grandTotal              Float?
  preparedById            String
  preparedBy              User                     @relation(fields: [preparedById], references: [id], name: "PreparedBy")
  approvedById            String
  approvedBy              User                     @relation(fields: [approvedById], references: [id], name: "ApprovedBy")
  dateOfReceiving         DateTime?
  createdAt               DateTime                 @default(now())
  updatedAt               DateTime                 @updatedAt
  MaterialReceiveVouchers MaterialReceiveVoucher[]
}

model PurchaseOrderItem {
  id                String        @id @default(uuid())
  listNo            Int
  description       String?
  unitOfMeasure     String
  quantityRequested Int
  unitPrice         Float
  totalPrice        Float
  remark            String?
  PurchaseOrder     PurchaseOrder @relation(fields: [purchaseOrderId], references: [id], name: "items")
  purchaseOrderId   String

  @@unique([id, listNo])
}

model MaterialReturnVoucher {
  id             String              @id @default(uuid())
  date           DateTime
  from           String
  receivingStore String
  items          ReturnVoucherItem[]
  returnedById   String
  returnedBy     User                @relation(fields: [returnedById], references: [id], name: "ReturnedByReturn")
  receivedById   String
  receivedBy     User                @relation(fields: [receivedById], references: [id], name: "ReceivedByReturn")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  User      User?    @relation(fields: [userId], references: [id])
  userId    String?
}

model ReturnVoucherItem {
  id                      String                @id @default(uuid())
  listNo                  Int
  description             String?
  issueVoucherId          String
  issueVoucher            MaterialIssueVoucher  @relation(fields: [issueVoucherId], references: [id], onDelete: Cascade)
  unitOfMeasure           String
  quantityReturned        Int
  unitCost                Float
  totalCost               Float
  remark                  String?
  materialReturnVoucherId String
  MaterialReturnVoucher   MaterialReturnVoucher @relation(fields: [materialReturnVoucherId], references: [id])

  @@unique([id, listNo])
}

model MaterialIssueVoucher {
  id                String              @id @default(uuid())
  date              DateTime
  projectDetails    String?
  issuedToId        String
  issuedTo          User                @relation(fields: [issuedToId], references: [id], name: "IssuedTo")
  requisitionNumber String?
  items             IssueVoucherItem[]  @relation(name: "items")
  preparedById      String
  preparedBy        User                @relation(fields: [preparedById], references: [id], name: "PreparedByIssue")
  approvedById      String
  approvedBy        User                @relation(fields: [approvedById], references: [id], name: "ApprovedByIssue")
  receivedById      String?
  receivedBy        User?               @relation(fields: [receivedById], references: [id], name: "ReceivedByIssue")
  createdAt         DateTime            @default(now())
  updatedAt         DateTime            @updatedAt
  ReturnVoucherItem ReturnVoucherItem[]
  User              User?               @relation(fields: [userId], references: [id])
  userId            String?
}

model IssueVoucherItem {
  id                     String               @id @default(uuid())
  listNo                 Int
  description            String?
  unitOfMeasure          String
  quantity               Int
  unitCost               Float
  totalCost              Float
  remark                 String?
  materialIssueVoucherId String
  MaterialIssueVoucher   MaterialIssueVoucher @relation(name: "items", fields: [materialIssueVoucherId], references: [id])

  @@unique([id, listNo])
}

model MaterialReceiveVoucher {
  id                String                 @id @default(uuid())
  date              DateTime
  projectDetails    String?
  supplierName      String
  invoiceId         String
  materialRequestId String
  materialRequest   MaterialRequestVoucher @relation(fields: [materialRequestId], references: [id], onDelete: Cascade)
  purchaseOrderId   String
  purchaseOrder     PurchaseOrder          @relation(fields: [purchaseOrderId], references: [id], onDelete: Cascade)
  items             MaterialReceiveItem[]
  purchasedById     String
  purchasedBy       User                   @relation(fields: [purchasedById], references: [id], name: "PurchasedBy")
  receivedById      String?
  receivedBy        User?                  @relation(fields: [receivedById], references: [id], name: "ReceivedByReceive")
  approvedById      String
  approvedBy        User                   @relation(fields: [approvedById], references: [id], name: "ApprovedByReceive")
  createdAt         DateTime               @default(now())
  updatedAt         DateTime               @updatedAt
}

model MaterialReceiveItem {
  id                       String                 @id @default(uuid())
  listNo                   Int
  description              String?
  unitOfMeasure            String
  quantity                 Int
  unitCost                 Float
  totalCost                Float
  materialReceiveVoucherId String
  MaterialReceiveVoucher   MaterialReceiveVoucher @relation(fields: [materialReceiveVoucherId], references: [id])

  @@unique([id, listNo])
}

model MaterialRequestVoucher {
  id                      String                   @id @default(uuid())
  date                    DateTime
  from                    String
  to                      String
  items                   MaterialRequestItem[]    @relation(name: "items")
  requestedById           String
  requestedBy             User                     @relation(fields: [requestedById], references: [id], name: "RequestedBy")
  approvedById            String
  approvedBy              User                     @relation(fields: [approvedById], references: [id], name: "ApprovedByRequest")
  PurchaseOrders          PurchaseOrder[]
  createdAt               DateTime                 @default(now())
  updatedAt               DateTime                 @updatedAt
  MaterialReceiveVouchers MaterialReceiveVoucher[]
}

model MaterialRequestItem {
  id                       String                 @id @default(uuid())
  listNo                   Int
  description              String?
  unitOfMeasure            String
  quantity                 Int
  inStockQuantity          Int?
  toBePurchasedQuantity    Int?
  remark                   String?
  materialRequestVoucherId String
  MaterialRequestVoucher   MaterialRequestVoucher @relation(name: "items", fields: [materialRequestVoucherId], references: [id])

  @@unique([id, listNo])
}

enum UserRole {
  CLIENT
  PROJECT_MANAGER
  CONSULTANT
  SITE_MANAGER
  PURCHASER
  STORE_MANAGER
}

enum DocumentType {
  MATERIAL_REQUEST
  MATERIAL_ISSUE
  MATERIAL_RECEIVING
  MATERIAL_RETURN
  PURCHASE_ORDER
}

enum ProgressStatus {
  PENDING
  IN_PROGRESS
  APPROVED
  DENIED
}
